# brunomaga.github.io

./: .gitattributes  .gitignore  404.html  Gemfile  README.md  SPDistributedSampler.drawio  _config.yml  about.md  faq.md  index.html  index.md  interview_questions.md  package-lock.json  package.json  publications.md  resources.md
.github/: dependabot.yml
_drafts/: 2015-05-12-Hodgkin-Huxley.md  2016-02-08-LIF-Brunel.md  2017-06-12-Blockchain.md  2017-11-01-Unsupervised-Learning.md  2017-11-27-Reinforcement-Learning.md  2018-02-17-Supervised-Learning.md  2018-06-17-Supervised-Learning.md  2019-02-10-Statistics-for-ML.md  2019-03-12-Bayesian-Regression-youtube.md  2019-03-12-Bayesian-Regression.md  2019-06-12-Text-Representation.md  2019-10-12-Bayesian-Optimization-1.md  2019-10-12-Bayesian-Optimization.md  2019-10-12-Bayesian-Regression.md  2019-11-05-Exponential-Family-Distributions.md  2019-11-12-Bayesian-Optimization-1.md  2019-11-20-Exponential-Family-Distributions.md  2019-11-29-Expectation-Maximization-GMM.md  2019-12-01-Bayesian-Optimization-2.md  2019-12-01-Bayesian-SVI-MCMC.md  2019-12-01-Bayesian-Variational-Inference-GMM.md  2019-12-29-Text-and-Sequence-Data.md  2020-05-12-AI-Supercomputing.md  2020-05-28-AI-Supercomputing-2.md  2021-02-10-Statistics-for-ML.md  2021-06-17-Algebra-and-Statistics-for-ML.md  2021-06-17-Statistics-for-Engineers.md  2021-06-18-Statistics-for-ML.md  (+21 more)
assets/GPT-lite-cpp/: CMakeLists.txt  README.md  benchmark.cpp  benchmark.h  benchmark.py  benchmark.xlsx  benchmark_model.drawio  gptlite.cpp  gptlite.py  main.cpp  main.py
(+176 files in other folders)
